--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     <p>Full stack Dev web</p>
                 </div>
                 <div class="formation right-div">
-                    <span>indeterminate</span>
+                    <span>Indeterminate</span>
                     <a href="https://edtecnica.com/" target="_blank">
                         <button>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-shield-check css-svt5ra"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10"></path><path d="m9 12 2 2 4-4"></path>shield-check</svg>
@@ -290,7 +290,7 @@
                     <p>Dev Web Responsive</p>
                 </div>
                 <div class="formation right-div">
-                    <span>indeterminate</span>
+                    <span>Indeterminate</span>
                     <a href="https://www.freecodecamp.org/" target="_blank">
                         <button>
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-shield-check css-svt5ra"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10"></path><path d="m9 12 2 2 4-4"></path>shield-check</svg>
